# adobe-analytics-api-2.0

./: .gitignore  LICENSE  MANIFEST.in  README.md  aanalytics2.py  pyproject.toml  requirements.txt  setup.py
aanalytics2/: CSV_Column_and_Query_String_Reference.pickle  __init__.py  __version__.py  aanalytics14.py  aanalytics2.py  annotationCreator.py  config.py  configs.py  connector.py  datarepair.py  dwhCreator.py  eventType_usageLogs.pickle  ingestion.py  modules.py  paths.py  projects.py  requestCreator.py  supported_tags.pickle  token_provider.py  workspace.py  workspaceCreator.py
adobe_analytics_2/: aanalytics2.py
docs/: annotationCreator.md  authenticating_without_config_json.md  datarepair.md  dwhCreator.md  getting_started.md  ingestion.md  legacyAnalytics.md  logging.md  main.md  projects.md  releases.md  requestCreator.md  test.md  workspace.md  workspaceCreator.md
test/: test_configuration.py  test_core_analytics.py
